syntax = "proto3";

package pb;

option go_package = "github.com/theme-ce/simple-shop/pb";

message DeleteProductRequest {
    int64 id = 1;
}

message DeleteProductResponse {
    bool success = 1;
    string message = 2;
}